--- a/restaurateur/templates/order_items.html
+++ b/restaurateur/templates/order_items.html
@@ -24,7 +24,7 @@
       <tr>
         <td>{{ item.pk }}</td>
         <td>{{ item.total }}</td>
-        <td>{{ item.firstname }} {{ item.order__lastname }}</td>
+        <td>{{ item.firstname }} {{ item.lastname }}</td>
         <td>{{ item.phonenumber }}</td>
         <td>{{ item.address }}</td>
       </tr>
