--- a/restaurateur/templates/order_items.html
+++ b/restaurateur/templates/order_items.html
@@ -29,7 +29,7 @@
         <td>{{ item.phonenumber }}</td>
         <td>{{ item.address }}</td>
         <td>
-          <a href="{% url 'admin:foodcartapp_order_change' item.pk %}">Редактировать</a>
+          <a href="{% url 'admin:foodcartapp_order_change' item.pk %}{{ next_url }}">Редактировать </a>
         </td>
       </tr>
     {% endfor %}
