--- a/restaurateur/templates/order_items.html
+++ b/restaurateur/templates/order_items.html
@@ -1,5 +1,5 @@
 {% extends 'base_restaurateur_page.html' %}
-
+{% load link_edit_orders %}
 {% block title %}Необработанные заказы | Star Burger{% endblock %}
 
 {% block content %}
@@ -29,7 +29,7 @@
         <td>{{ item.phonenumber }}</td>
         <td>{{ item.address }}</td>
         <td>
-          <a href="{% url 'admin:foodcartapp_order_change' item.pk %}{{ next_url }}">Редактировать </a>
+          <a href="{{ item|link_edit_orders }}">Редактировать</a>
         </td>
       </tr>
     {% endfor %}
