base_restaurateur_page.py has been modified

--- a/restaurateur/templates/order_items.html
+++ b/restaurateur/templates/order_items.html
@@ -1,25 +1,25 @@
 {% extends 'base_restaurateur_page.html' %}
 {% load link_edit_orders %}
-{% load block_available_restaurants %}
+{% load create_block_available_restaurants %}
 {% block title %}Необработанные заказы | Star Burger{% endblock %}
 
 {% block add_style %}
 <style type="text/css">
-  details {
+  .table-responsive details {
     border: 1px solid #aaa;
     border-radius: 4px;
     padding: .5em .5em 0;
   }
-  summary {
+  .table-responsive summary {
       font-weight: bold;
       margin: -.5em -.5em 0;
       padding: .5em;
       background-color: #BBFFEE;
   }
-  details[open] {
+  .table-responsive details[open] {
       padding: .5em;
   }
-  details[open] summary {
+  .table-responsive details[open] summary {
     border-bottom: 1px solid #aaa;
     margin-bottom: .5em;
   }
@@ -61,7 +61,7 @@
         <td>{{ item.address }}</td>
         <td>{{ item.comment }}</td>
         <td width="18%">
-          {{ restaurants_available|block_available_restaurants:item.pk }}
+          {{ restaurants_available|create_block_available_restaurants:item.pk }}
         </td>
         <td>
           <a href="{{ item|link_edit_orders }}">Редактировать</a>
