--- a/restaurateur/templates/order_items.html
+++ b/restaurateur/templates/order_items.html
@@ -1,6 +1,5 @@
 {% extends 'base_restaurateur_page.html' %}
 {% load link_edit_orders %}
-{% load get_available_restaurants %}
 {% block title %}Необработанные заказы | Star Burger{% endblock %}
 
 {% block add_style %}
@@ -50,18 +49,31 @@
       <th>Ссылка на админку</th>
     </tr>
 
-    {% for item in order_items %}
+    {% for item in order_items.values %}
       <tr>
         <td>{{ item.pk }}</td>
-        <td>{{ item.get_status_display }}</td>
-        <td>{{ item.get_payment_method_display }}</td>
-        <td>{{ item.total }}</td>
-        <td>{{ item.firstname }} {{ item.lastname }}</td>
-        <td>{{ item.phonenumber }}</td>
+        <td>{{ item.status }}</td>
+        <td>{{ item.payment_method }}</td>
+        <td>{{ item.total_cost }}</td>
+        <td>{{ item.client }}</td>
+        <td>{{ item.phone }}</td>
         <td>{{ item.address }}</td>
         <td>{{ item.comment }}</td>
         <td width="18%">
-            {{ blocks_restaurants|get_available_restaurants:item.pk }}
+          {% if item.prepare %}
+            {% for restaurant in item.restaurants %}
+              Заказ готовится рестораном:<br>&#10004 {{ restaurant.name }} - {{ restaurant.dist }} км
+            {% endfor %}
+          {% else %}
+            <details>
+              <summary>Может быть приготовлен &#9660</summary>
+                {% for restaurant in item.restaurants %}
+                  &#10004{{ restaurant.name }} - {{ restaurant.dist }} км<br>
+                {% endfor %}
+            </details>
+          {% endif %}
+
+
         </td>
         <td>
           <a href="{{ item|link_edit_orders }}">Редактировать</a>
